--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,14 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon_app"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,7 +21,13 @@
         <activity
             android:name=".Home"
             android:label="@string/title_activity_home" />
-        <activity android:name=".Detail"></activity>
+        <activity android:name=".Detail" />
+        <activity android:name=".Konfirmasi" />
+        <activity android:name=".Registrasi" />
+        <activity android:name=".Pembayaran" />
+        <activity android:name=".Filter" />
+        <activity android:name=".Login" />
+        <activity android:name=".History"></activity>
     </application>
 
 </manifest>
